Functional Abomination of Shims and IG, but it loads, and should work... once I fix the template shims
Hopefully this shim method will allow me to just... implement a bunch of stuff without tooo much adjustment, as I know I'll likely need to backport any other features I add to 1.20.1