@@ -1,5 +1,9 @@
 package com.igteam.immersivegeology.core.material.data.stone.vanilla;
 
+import com.igteam.immersivegeology.core.lib.shim.MCShims.Blocks;
+
+import net.minecraft.world.World;
+
 import com.igteam.immersivegeology.core.material.helper.material.IGBlockProperties;
 
 import com.igteam.immersivegeology.core.material.data.types.MaterialStone;
@@ -10,7 +14,6 @@ import com.igteam.immersivegeology.core.material.helper.flags.ModFlags;
 import com.igteam.immersivegeology.core.material.helper.material.StoneFormation;
 
 import java.util.Set;
-import net.minecraft.init.Blocks;
 
 import java.util.function.BiFunction;
 
@@ -20,7 +23,7 @@ public class MaterialMCBasalt extends MaterialStone {
         super();
         this.name = "basalt"; // Special Case as we need to override the default name assignment method
         this.STONE_FORMATION = StoneFormation.NETHER_STONE;
-        this.DIMENSIONS = Set.of(World.NETHER.location());
+        this.DIMENSIONS = java.util.Collections.singleton(new net.minecraft.util.ResourceLocation("the_nether"));
         addFlags(MaterialFlags.EXISTING_IMPLEMENTATION, ModFlags.MINECRAFT);
     }
 
